Added test antivirus ai    -seperated aiController into seperate modules for human player, computer player and actual ai jumping behaviour

--- a/Prototype01/Assembly-CSharp-vs.csproj
+++ b/Prototype01/Assembly-CSharp-vs.csproj
@@ -44,6 +44,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AiActor.cs" />
+     <Compile Include="Assets\Scripts\AiComputerController.cs" />
      <Compile Include="Assets\Scripts\AiController.cs" />
      <Compile Include="Assets\Scripts\RobotController.cs" />
      <Compile Include="Assets\TK2DROOT\tk2d\Code\Camera\tk2dCamera.cs" />
