--- a/Prototype01/Assembly-CSharp-vs.csproj
+++ b/Prototype01/Assembly-CSharp-vs.csproj
@@ -50,6 +50,8 @@
      <Compile Include="Assets\Scripts\FieldOfView.cs" />
      <Compile Include="Assets\Scripts\GadgetControllerInterface.cs" />
      <Compile Include="Assets\Scripts\GuardController.cs" />
+     <Compile Include="Assets\Scripts\PatrolPath.cs" />
+     <Compile Include="Assets\Scripts\PatrolPathWaypoint.cs" />
      <Compile Include="Assets\Scripts\RobotController.cs" />
      <Compile Include="Assets\Scripts\SecurityCamera.cs" />
      <Compile Include="Assets\Scripts\Utility.cs" />
