- fixed takedown issue - added max range to ai - added turret spawner - added escape trigger that allows the player to win if the alarm trigger has been reached - added breakable door that can be destroyed by the robot once the alarm trigger has been reached and robot powered up - added bullet firing to Ai

--- a/Prototype01/Assembly-CSharp-vs.csproj
+++ b/Prototype01/Assembly-CSharp-vs.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Audio\SynchronisedPlayer.cs" />
      <Compile Include="Assets\Scripts\Detection Systems\AlarmTrigger.cs" />
      <Compile Include="Assets\Scripts\Detection Systems\DelayedReactionLogic.cs" />
+     <Compile Include="Assets\Scripts\Detection Systems\EscapeTrigger.cs" />
      <Compile Include="Assets\Scripts\Detection Systems\FieldOfView.cs" />
      <Compile Include="Assets\Scripts\Detection Systems\ReactionLogic.cs" />
      <Compile Include="Assets\Scripts\Detection Systems\ReactionMethod.cs" />
@@ -86,12 +87,15 @@
      <Compile Include="Assets\Scripts\Player Characters\AiControllable.cs" />
      <Compile Include="Assets\Scripts\Player Characters\AiController.cs" />
      <Compile Include="Assets\Scripts\Player Characters\RobotController.cs" />
+     <Compile Include="Assets\Scripts\Props\BreakableDoor.cs" />
      <Compile Include="Assets\Scripts\Props\Bullet.cs" />
      <Compile Include="Assets\Scripts\Props\Door.cs" />
      <Compile Include="Assets\Scripts\Props\GuardSpawner.cs" />
      <Compile Include="Assets\Scripts\Props\MovingPlatform.cs" />
+     <Compile Include="Assets\Scripts\Props\Spawner.cs" />
      <Compile Include="Assets\Scripts\Props\Trigger.cs" />
      <Compile Include="Assets\Scripts\Props\Turret.cs" />
+     <Compile Include="Assets\Scripts\Props\TurretSpawner.cs" />
      <Compile Include="Assets\TK2DROOT\tk2d\Code\Camera\tk2dCamera.cs" />
      <Compile Include="Assets\TK2DROOT\tk2d\Code\Camera\tk2dCameraAnchor.cs" />
      <Compile Include="Assets\TK2DROOT\tk2d\Code\Camera\tk2dCameraUtil.cs" />
