--- a/Prototype01/Assembly-CSharp-vs.csproj
+++ b/Prototype01/Assembly-CSharp-vs.csproj
@@ -78,9 +78,11 @@
      <Compile Include="Assets\Scripts\Detection Systems\ShootReactionMethod.cs" />
      <Compile Include="Assets\Scripts\General\ActivatableGadget.cs" />
      <Compile Include="Assets\Scripts\General\CameraControllerTwoPoint.cs" />
+     <Compile Include="Assets\Scripts\General\Destroyed.cs" />
      <Compile Include="Assets\Scripts\General\GadgetInterface.cs" />
      <Compile Include="Assets\Scripts\General\GameManager.cs" />
      <Compile Include="Assets\Scripts\General\ICameraController.cs" />
+     <Compile Include="Assets\Scripts\General\Mathfx.cs" />
      <Compile Include="Assets\Scripts\General\Pulse.cs" />
      <Compile Include="Assets\Scripts\General\SpriteEffects.cs" />
      <Compile Include="Assets\Scripts\General\TimerLight.cs" />
